force-app/main/default/objects/CompanyInformation__c/CompanyInformation__c.object-meta.xml
<CustomObject>
    <label>Company Information</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>