force-app/main/default/objects/CompanyInformation__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch (not used)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ha Noi</fullName>
            </value>
            <value>
                <fullName>Hai Phong</fullName>
            </value>
            <value>
                <fullName>Ho Chi Minh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>