force-app/main/default/objects/CompanyInformation__c/fields/CompanyLogo__c.field-meta.xml
<CustomField>
    <fullName>CompanyLogo__c</fullName>
    <label>Company Logo</label>
    <type>Url</type>
</CustomField>