force-app/main/default/objects/CompanyInformation__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <defaultValue>&apos;TIMES CARGO LOGISTIC CO.,LTD&apos;</defaultValue>
    <label>Name</label>
    <type>TextArea</type>
</CustomField>