force-app/main/default/objects/CompanyInformation__c/fields/OfficialCompanyName__c.field-meta.xml
<CustomField>
    <fullName>OfficialCompanyName__c</fullName>
    <label>Official Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>