force-app/main/default/objects/CompanyInformation__c/fields/ShowAddressonHeader__c.field-meta.xml
<CustomField>
    <fullName>ShowAddressonHeader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Address on Header</label>
    <type>Checkbox</type>
</CustomField>