force-app/main/default/objects/CompanyInformation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch1__c</columns>
    <columns>TaxCode__c</columns>
    <columns>Tel__c</columns>
    <columns>Fax__c</columns>
    <columns>Website__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>